sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:10: error: ')' expected but 'while' found.
    while(i+ecart<getNombreValeurs()-1){
    ^AlgCombSort:15: error: 'while' expected but ')' found.
  ){
  ^AlgCombSort:18: error: '(' expected but '}' found.
}
^