sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var ecart=getNombreValeurs()-1
  var inverse=false
  do(
    if(ecart>1){
      ecart = (ecart.toDouble / 1.3).toInt
    }
    i=0
    while(i+ecart<getNombreValeurs()-1){
      i=i+ecart
      inverse=true
      i=i+1
    }
  ){
  while(ecart>1 || inverse=true)
  }
}
